8263459: Add better support for restricted methods
 --enable-native-access=<module1>,<module2>,<moduleN>